# ImageTranslator

./: README.md  imagetranslator.py  logger.py  ocr.py  pyproject.toml  translator.py  util.py
.github/workflows/: main.yml
gui/: README.md  imagetranslator_gui.py  package.py  pyproject.toml
