[project]
name = "imagetranslator"
version = "0.1.0"
description = "Translate images locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "argostranslate>=1.9.6",
    "bergamot>=0.4.5; sys_platform != 'win32'",
    "cnocr[ort-cpu]>=2.3.2.1",
    "easynmt>=2.0.2",
    "easyocr>=1.7.2",
    "numpy",
	"paddlepaddle>=3.2.0",
    "paddleocr[all]>=3.2.0",
    "pillow>10.0,<11.0",
    "platformdirs>=4.4.0",
    "puremagic>=1.30",
    "pylette>=5.1",
    "pyocr>=0.8.5",
    "pypdf>=6.0.0",
    "scipy>=1.15.3",
    "sentencepiece",
    "simple-lama-inpainting>=0.1.1",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[tool.uv]
# fasttext is disabled because it can't be compiled on windows.
# I disabled it globally since we don't use it anyway
override-dependencies = [
    "fasttext; sys_platform == 'never'",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.py",
]

[tool.uv.workspace]
members = ["gui"]

[project.scripts]
imagetranslator = "imagetranslator:main"
