[project]
name = "imagetranslator-gui"
version = "0.1.0"
description = "GUI application for imagetranslator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imagetranslator",
    "iso-639>=0.4.5",
    "wxpython>=4.2.4",
]

[tool.uv.sources]
imagetranslator = { workspace = true }

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.gui-scripts]
imagetranslator-gui = "imagetranslator_gui:main"
